--- a/examples/README
+++ b/examples/README
@@ -1,4 +1,8 @@
-This directory contains several flow-graphs to get you going. Some that transmit RF obviously require an SDR with an rf sink, i.e., a transmitter. These examples use a UHD (I have an Ettus Research B200). If you have a different rf sink, you will need to change the example by removing the UHD and adding your rf sink. In general rf sinks will not work with any input sampling rate, so you may have to play with the examples a bit if gnuradio reports any trouble with setting clock rates. The error and warning messages do a good job of pointing you to the correct solution. If you use a transmitting flow-graph, you should have a amateur radio license.
+This directory contains several flow-graphs to get you going. Some that transmit RF obviously require an SDR with an rf sink, i.e., a transmitter. These examples use a UHD (I have an Ettus Research B200). If you have a different rf sink, you will need to change the example by removing the UHD and adding your rf sink.
+
+In general rf sinks will not work with any input sampling rate, so you may have to play with the examples a bit if gnuradio reports any trouble with setting clock rates. The error and warning messages do a good job of pointing you to the correct solution. If you use a transmitting flow-graph, you should have a amateur radio license.
+
+You can't have both the encoder and the decoder in a single flowgraph, so make a transmitter or a receiver, but not a transceiver.
 
 The examples:
 
